Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81573

Windows style and stylesheet for not-editable QComboBox picks wrong background rule

XMLWordPrintable

    • d7a5d6a98d237f48edd71458cf6fb24d5c9f01e1 (qt/qtbase/5.14)

      When editable and not-editable styles are declared, not-editable QComboBox takes editable rule instead when it has focus. To reproduce, run attached application on windows or with -style windows.

        1. qtbug81573.zip
          0.9 kB
        2. qtbug81573.jpg
          qtbug81573.jpg
          244 kB
        3. qtbug81573_comparison.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes